--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <meta name="google-site-verification" content="google4674f1688e313da5">
+    
     <title>Anshu medical store</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c58add7555.js" crossorigin="anonymous"></script>
