--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <meta name="google-site-verification" content="google4674f1688e313da5">
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Anshu Medical Store – trusted pharmacy since 2000. Managed by Mr. Bhagya Narayan Mahto.">
+    <meta name="keywords" content="Anshu Medical Store, medical shop, pharmacy, Bhagya Narayan Mahto, medicines, health store">
+    <meta name="author" content="Anshu Medical Store">
+    <meta name="robots" content="index, follow">
+
     
     <title>Anshu medical store</title>
     <link rel="stylesheet" href="style.css">
