--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
+    <meta name="msvalidate.01" content="5D60206CB9BBA4B717EBF89BD508F183" />
     <meta name="google-site-verification" content="google4674f1688e313da5">
     <!-- SEO Meta Tags -->
     <meta name="description" content="Anshu Medical Store – trusted pharmacy since 2000. Managed by Mr. Bhagya Narayan Mahto.">
