--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c58add7555.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body id="home">
     <header>
    <div class="upper-box"></div>
    <div class="head">
@@ -26,10 +26,10 @@
             <p>ANSHU MEDICAL STORE</p>
         </div>
         <ul id="navLinks" class="navLinks">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
             <button onclick="CloseNav()">CloseNav</button>
         </ul>
         <button class="buyNow">Buy Now</button>
