--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     
     <title>Anshu medical store</title>
+    <link rel="import" href="medicine.html">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c58add7555.js" crossorigin="anonymous"></script>
 </head>
@@ -32,7 +33,7 @@
             <li><a href="#contact">Contact</a></li>
             <button onclick="CloseNav()">CloseNav</button>
         </ul>
-        <button class="buyNow">Buy Now</button>
+        <button class="buyNow" id="buyNow">Online Order</button>
    </div>
     <div class="category">
         <div id="toggle" onclick="navOpen()" class="toggle">
